--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             align-items:center;
             padding-top:150px;
             background: url(time.png);
-            
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100% 100%;
         }
         .outer-div{
             background-color: rgba(128, 128, 128,0.3);
