--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            box-shadow: inset 3px 3px 30px  #000000;;
         }
        
         .inner-div #time{
