--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background-size: 100% 100%;
         }
         .outer-div{
-            background-color: rgba(128, 128, 128,0.3);
+            background-color: rgba(118, 118, 118, 0.3);
             padding: 15px;
             border-radius: 50%;
             height: 300px;
@@ -38,14 +38,14 @@
             
         }
         .inner-div{
-            background-color: #161B22;  
+            background-color: #3f3f3f;  
             border-radius: 50%;
             height: 250px;
             width: 250px; 
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: inset 3px 3px 30px  #000000;;
+            box-shadow: inset 0px 0px 60px #000000;
         }
        
         .inner-div #time{
